tests/ui/enum_var_no_key.stderr
error: fixed-derive error: The parameter key must be provided for all enum variants.

        Try adding #[fixed(key = "<my key>")] to this variant.
  --> tests/ui/enum_var_no_key.rs:15:5
   |
15 |     Thing2(MyStruct),
   |     ^^^^^^

error: fixed-derive error: The parameter key must be provided for all enum variants.

        Try adding #[fixed(key = "<my key>")] to this variant.
  --> tests/ui/enum_var_no_key.rs:21:5
   |
21 |     Thing1(#[fixed(width = 5)] u16),
   |     ^^^^^^
